Fri Aug  4 21:48:41 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* read_servi.c (krb5_kt_read_service_key): add more parens to shut
		up gcc -Wall

	* ktdefault.c (krb5_kt_default): add more parens to shut up gcc
		-Wall

Fri Jun  9 19:33:33 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.  Use DO_SUBDIRS to
		recurse down subdirectories.

Fri May 26 20:20:18 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in, Makefile.in: Add support for building shared libraries.

Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)

	* *.c: removed unneeded INTERFACE from non-api functions.

Fri Mar 17 19:46:07 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (LDFLAGS):  Zap duplicate defn.
	(all-mac, clean-mac):  Add.

Wed Mar 15 20:23:17 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: cleaned up for the PC

Tue Mar 7 21:40:18 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: changed library name for the PC.

Tue Mar  7 19:53:56 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in: take out ISODE_DEFS.

Wed Mar 3 16:30:00 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: changed LIB to LIBCMD for the PC

Tue Feb 28 00:59:22 1995  John Gilmore  (gnu at toad.com)

	* *.c:  Avoid <krb5/...> includes.

Wed Feb 22 01:38:54 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: made to work on the PC
        * *.c: added windows INTERFACE keyword

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

	* read_servi.c (krb5_kt_read_service_key) Add krb5_keytype arg.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    	* Added krb5_context to all krb5_routines

Fri Oct 14 23:09:02 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Add ISODE_DEFS rule.

Tue Oct  4 22:06:15 1994  Theodore Y. Ts'o  (tytso@dcl)

	* ktfr_entry.c (krb5_kt_free_entry): Only try to free
		entry->key.contents if it is non-NULL.  If entry is NULL,
		return.
